--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
   velocity_x: ^4.2.1
+  email_validator: '^2.1.16'
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  pinput: ^5.0.0
+  email_otp: ^3.0.2
 
 dev_dependencies:
   flutter_test:
